--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,7 +66,11 @@ a {
 }
 
 .glass p {
-  margin-top: 20px;
   color: #000;
   font-size: 16px;
+}
+
+p {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
